Start Project Expense Tracker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,11 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/expense-tracker
 spring.datasource.username=expense_tracker
 spring.datasource.password=slsb$ex@tr
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+## Hibernate properties
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database=postgresql
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
